[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/CatMan Menu.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameVersionLabel" type="Label" parent="TextureRect"]
anchor_left = 1.0
anchor_top = 0.991
anchor_right = 1.0
anchor_bottom = 0.991
margin_left = -135.0
margin_top = -14.0
text = "GAME VERSION INFO"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -101.0
margin_right = 107.0
margin_bottom = -5.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 87.0
margin_bottom = 20.0
text = "PLAY"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 87.0
margin_bottom = 50.0
text = "SETTINGS"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 87.0
margin_bottom = 80.0
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
